# vis-play

./: .gitignore  .oxfmtrc.json  .prettierignore  Cargo.toml  README.md  eslint.config.js  eslint.config.ts  eslint.helpers.js  eslint.helpers.ts  lefthook.yml  nx.json  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  rustfmt.toml  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: deploy.yml
.zed/: settings.json
apps/vis/: .prettierignore  eslint.config.js  eslint.config.ts  index.html  lefthook.yml  oxfmt.config.ts  oxlint.config.ts  package.json  postcss.config.cjs  prettier.config.js  tailwind.config.ts  tsconfig.bun.json  tsconfig.json  tsconfig.node.json  tsconfig.src.json  vite.config.ts  vitest.config.ts
apps/vis/scripts/shadcdn-oklch/: convert.ts
apps/vis/scripts/shadcn-oklch/: convert.ts  source-theme.css
apps/vis/src/: app.css  app.tsx  index.css  index.tsx  logger.ts  nannou.tsx  style.ts  theme.css  theme.tsx  tsconfig.json  vis.tsx
