[workspace]
resolver = "2"
members = ["packages/vis-rs"]

# [https://rustwasm.github.io/book/reference/code-size.html --
[profile.release]
lto = true
opt-level = "s"
# --]

# [https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds --
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
# --]
