[workspace]
resolver = "3"
members = ["packages/vis-rs"]

[workspace.package]
edition = "2024"

# [https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds --
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
# --]

# [https://rustwasm.github.io/book/reference/code-size.html --
[profile.release]
opt-level = "s"
lto = true
# --]
